# DataAnalyzer

./: .~26春-实验3结构型设计模式分析与应用-姓名-学号-周三.docx  2026春-实验3结构型设计模式分析与应用-姓名-学号-周三.docx  AGENTS.md  Cargo.toml  HT_工序纪录明细查询(2024年8月).xlsx  log.txt  工作簿1.xlsx
.VSCodeCounter/2026-04-13_14-01-32/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2026-04-13_14-06-44/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2026-04-13_14-10-43/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2026-04-13_14-36-09/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2026-04-15_16-39-34/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2026-05-20_09-34-21/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
config/: router_quality.toml  router_work_record.toml
data/: material_production_stats.db  material_production_stats.json  operator_puaration_stats.db  operator_puaration_stats.json  puaration_stats.db  puaration_stats.json  work_record.db
docs/: class-diagram.md  class_diagram.mermaid  程序执行逻辑与结构体说明.md
sink_macro/: Cargo.toml
src/: config.rs  data_creater.rs  error.rs  excel_reader.rs  extractor_pipeline.rs  log.rs  main.rs  progress_table.rs  traits.rs
(+134 files in other folders)
